# cpp_tut

./: .clang-format  CMakeLists.txt  LICENSE  README.en.md  main.cpp
.cache/clangd/index/: base01.cpp.1AD2641DD2330E78.idx  base1.h.43ACA6FD0079CD12.idx  main.cpp.A8D2106E59B4CD07.idx
base1/: CMakeLists.txt  base01.cpp  base02.cpp  base1.h  notebook_base.md
modern_cpp/: CMakeLists.txt  box.cpp  box.h  box_operating.cpp  box_operating.h  carton.cpp  carton.h  modernc_main.cpp  modernc_main.h
primer_01_base/: CMakeLists.txt  primer.h
primer_02_class/: CMakeLists.txt  primer_class_main.cpp
primer_03_container/: CMakeLists.txt  note.md
primer_04_dynamic_memory/: CMakeLists.txt  primer_dynamic_main.cpp  primer_dynamic_mem.cpp  primer_dynamic_mem.h
primer_05_copy_ctrl/: CMakeLists.txt  primer_copy_ctrl.cpp  primer_copy_ctrl.h  primer_copy_ctrl_main.cpp
primer_06_oop/: CMakeLists.txt  primer_oop.cpp  primer_oop.h  primer_oop_main.cpp
primer_07_template/: CMakeLists.txt  primer_template.cpp  primer_template.h  primer_template_main.cpp
primer_base/: primer.h  primer_base.cpp  primer_main.cpp
primer_class/: primer_class.cpp  primer_class.h  primer_class_main.cpp
primer_container/: primer_container.cpp  primer_container.h  primer_container_main.cpp
